--- a/request.html
+++ b/request.html
@@ -127,7 +127,7 @@
     </p>
     <p>
         Авторизируйтесь
-        <input type = 'text' name = 'name' value = 'Имя и фамилия'  class = 'form-control'> Пароль<input type = 'password' name = 'parol'  class = 'form-control'>
+        <input type = 'text' name = 'name' value = 'Имя и фамилия'  class = 'form-control'> Пароль<input type = 'password' name = 'parol'  class = 'form-control' value = '568733'>
         
     </p>
     <p>Введите ваш возраст
@@ -142,17 +142,7 @@
     <p>
         Каким жанрам соответствует аниме?
         </p>
-        <p>
-        <lable>Сенен<input type = 'checkbox' name = 'janr1'></lable>
-        <lable>Повседневность<input type = 'checkbox' name = 'janr2'></lable>
-        <lable>Фентези<input type = 'checkbox' name = 'janr3'></lable>
-        <lable>Романтика<input type = 'checkbox' name = 'janr4'></lable>
-        <lable>Сёдзе<input type = 'checkbox' name = 'janr5'></lable>
-        <lable>Исекай<input type = 'checkbox' name = 'janr6'></lable>
-        <lable>Триллер<input type = 'checkbox' name = 'janr7'></lable>
-        <lable>Комедия<input type = 'checkbox' name = 'janr8'></lable>
-
-    </p>
+       
     <p>
         На сколько вы бы оценили это аниме по 10-ти бальной шкале?
         <input type = 'number' name = 'decision' min = '0' max = '10'  class = 'form-control'>
