--- a/request.html
+++ b/request.html
@@ -139,6 +139,7 @@
        <lable>Мужской <input type = 'radio' name = 'male'></lable><lable>Женский <input type = 'radio' name = 'female'></lable>
     </p>
     <p>Введите название аниме, которое вы бы хотели добавить</p>
+    <input type = 'text'  class = 'form-control'>
     <p>
         Каким жанрам соответствует аниме?
         </p>
