--- a/request.html
+++ b/request.html
@@ -139,14 +139,14 @@
        <lable>Мужской <input type = 'radio' name = 'male'></lable><lable>Женский <input type = 'radio' name = 'female'></lable>
     </p>
     <p>Введите название аниме, которое вы бы хотели добавить</p>
-    <input type = 'text'  class = 'form-control'>
+    <input type = 'text'  class = 'form-control' value = 'Фрирен'>
     <p>
         Каким жанрам соответствует аниме?
         </p>
        
     <p>
         На сколько вы бы оценили это аниме по 10-ти бальной шкале?
-        <input type = 'number' name = 'decision' min = '0' max = '10'  class = 'form-control'>
+        <input type = 'number' name = 'decision' min = '0' max = '10'  class = 'form-control' value = '10'>
     </p>
     <p>
         Опишите сюжет Аниме
