--- a/request.html
+++ b/request.html
@@ -139,7 +139,7 @@
        <lable>Мужской <input type = 'radio' name = 'male'></lable><lable>Женский <input type = 'radio' name = 'female'></lable>
     </p>
     <p>Введите название аниме, которое вы бы хотели добавить</p>
-    <input type = 'text'  class = 'form-control' value = 'Фрирен'>
+    <input type = 'text'  class = 'form-control' name = 'anime'value = 'Фрирен'>
     <p>
         Каким жанрам соответствует аниме?
         </p>
@@ -152,7 +152,7 @@
         Опишите сюжет Аниме
     </p>
     <p>
-        <textarea cols = '50' rows = '10'  class = 'form-control'>
+        <textarea cols = '50' rows = '10'  class = 'form-control' name = 'plot' value = 'Бла бла бла бла бла бла'>
 
         </textarea>
     </p>
