--- a/request.html
+++ b/request.html
@@ -152,7 +152,8 @@
         Опишите сюжет Аниме
     </p>
     <p>
-        <textarea cols = '50' rows = '10'  class = 'form-control' name = 'plot' value = 'Бла бла бла бла бла бла'>
+        <textarea cols = '50' rows = '10'  class = 'form-control' name = 'plot' >
+            Бла бла бла бла
 
         </textarea>
     </p>
